@@ -4,10 +4,16 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -15,6 +21,7 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.server.ResponseStatusException;
 
 import com.nighthawk.spring_portfolio.mvc.person.Person;
 import com.nighthawk.spring_portfolio.mvc.person.PersonJpaRepository;
@@ -33,6 +40,8 @@ import lombok.Setter;
 @RequestMapping("/api/submissions")
 public class AssignmentSubmissionAPIController {
 
+    private Logger logger = LoggerFactory.getLogger(getClass());
+
     @Autowired
     private AssignmentSubmissionJPA submissionRepo;
 
@@ -44,30 +53,6 @@ public class AssignmentSubmissionAPIController {
 
     @Autowired
     private SynergyGradeJpaRepository gradesRepo;
-
-    @Getter
-    @Setter
-    public static class AssignmentSubmissionReturnDto {
-        public Long id;
-        public AssignmentReturnDto assignment;
-        public List<PersonSubmissionDto> students;
-        public String content;
-        public String comment;
-        public Double grade;
-        public String feedback;
-        public Boolean isLate;
-
-        public AssignmentSubmissionReturnDto(AssignmentSubmission submission) {
-            this.id = submission.getId();
-            this.assignment = new AssignmentReturnDto(submission.getAssignment());
-            this.students = submission.getStudents().stream().map(PersonSubmissionDto::new).toList();
-            this.content = submission.getContent();
-            this.comment = submission.getComment();
-            this.grade = submission.getGrade();
-            this.feedback = submission.getFeedback();
-            this.isLate = submission.getIsLate();
-        }
-    }
 
     @Getter
     @Setter
@@ -221,7 +206,15 @@ public class AssignmentSubmissionAPIController {
      */
     @Transactional
     @GetMapping("/assignment/{assignmentId}")
-    public ResponseEntity<?> getSubmissionsByAssignment(@PathVariable Long assignmentId) {
+    public ResponseEntity<?> getSubmissionsByAssignment(@PathVariable Long assignmentId,
+                                                       @AuthenticationPrincipal UserDetails userDetails) {
+        String uid = userDetails.getUsername();
+        Person user = personRepo.findByUid(uid);
+        if (user == null) {
+            logger.error("User not found with email: {}", uid);
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found with uid: " + uid);
+        }
+
         Assignment assignment = assignmentRepo.findById(assignmentId).orElse(null);
         if (assignment == null) {
             return new ResponseEntity<>(
@@ -229,9 +222,56 @@ public class AssignmentSubmissionAPIController {
                 HttpStatus.NOT_FOUND
             );
         }
-        List<AssignmentSubmissionReturnDto> submissions = submissionRepo.findByAssignmentId(assignmentId).stream()
-            .map(AssignmentSubmissionReturnDto::new)
-            .toList();
-        return new ResponseEntity<>(submissions, HttpStatus.OK);
+
+        List<AssignmentSubmission> submissions = submissionRepo.findByAssignmentId(assignmentId);
+        List<AssignmentSubmissionReturnDto> submissionsReturn;
+
+        if (!(user.hasRoleWithName("ROLE_TEACHER") || user.hasRoleWithName("ROLE_ADMIN"))) {
+            // if they aren't a teacher or admin, only let them see submissions they are assigned to grade
+            submissionsReturn = submissions.stream()
+                .filter(submission -> submission.getAssignedGraders().contains(user))
+                .map(AssignmentSubmissionReturnDto::new)
+                .collect(Collectors.toList());
+        } else {
+            submissionsReturn = submissions.stream()
+                .map(AssignmentSubmissionReturnDto::new)
+                .collect(Collectors.toList());
+        }
+    
+        return new ResponseEntity<>(submissionsReturn, HttpStatus.OK);
+    }
+
+    @PostMapping("/{id}/assigned-graders")
+    public ResponseEntity<?> assignGradersToSubmission(@PathVariable Long id, @RequestBody List<Long> personIds) {
+        Optional<AssignmentSubmission> submissionOptional = submissionRepo.findById(id);
+        if (!submissionOptional.isPresent()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Submission not found");
+        }
+
+        AssignmentSubmission submission = submissionOptional.get();
+        List<Person> persons = personRepo.findAllById(personIds);
+
+        submission.setAssignedGraders(persons);
+
+        submissionRepo.save(submission);
+        return ResponseEntity.ok("Persons assigned successfully");
+    }
+
+    @GetMapping("/{id}/assigned-graders")
+    public ResponseEntity<?> getAssignedGraders(@PathVariable Long id) {
+        Optional<AssignmentSubmission> submissionOptional = submissionRepo.findById(id);
+        if (!submissionOptional.isPresent()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Submission not found");
+        }
+
+        AssignmentSubmission submission = submissionOptional.get();
+        List<Person> assignedGraders = submission.getAssignedGraders();
+        
+        // Return just the IDs of assigned persons
+        List<Long> assignedGraderIds = assignedGraders.stream()
+            .map(Person::getId)
+            .collect(Collectors.toList());
+            
+        return ResponseEntity.ok(assignedGraderIds);
     }
 }
